@@ -129,6 +129,8 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
     - deduplicate.sh: add more useful information in fixup section's error
       message.
     - deduplicate.sh: unstub fixup section.
+    - deduplicate.sh: parse_otool_output: jump over first matching entry,
+      which is - hopefully - the id line.
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
